# nineteen

./: .gitignore  README.md  pyproject.toml
src/nineteen/: __init__.py  __main__.py  cli.py  display.py  prompts.py
src/nineteen/agent/: __init__.py  core.py
src/nineteen/providers/: __init__.py  base.py  ollama.py
src/nineteen/tools/: __init__.py  base.py  filesystem.py
